--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,6 +1,7 @@
-/characters/
-/server/
-/client/
-/control/
-/driver/
 /level/
+/control/
+/characters/
+/dropoutbear.jpg
+/lilyachty.jpg
+/taylor.jpg
+/driver/
