--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,17 +1,8 @@
-<<<<<<< HEAD
-/level/
-=======
+/.classpath
+/.project
 /characters/
 /client/
->>>>>>> 69c43b435d2fa0cd3c31ac187e3e1b0f743ccafd
 /control/
-/characters/
-/dropoutbear.jpg
-/lilyachty.jpg
-/taylor.jpg
 /driver/
-<<<<<<< HEAD
-=======
 /level/
 /server/
->>>>>>> 69c43b435d2fa0cd3c31ac187e3e1b0f743ccafd
